# pmprov

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  pr-scope-labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-scope-labeler.yml  pr-size-labeler.yml  sync-labels.yml
examples/jupyter/: acceptance_criteria_demo.ipynb  provenance_demo.ipynb
examples/marimo/: acceptance_criteria_demo.py  plotly_capture_demo.py  provenance_demo.py
examples/marimo/__marimo__/session/: provenance_demo.py.json
examples/utils/: event_enricher.py
models/: __init__.py  agents.py  analysis.py  artifacts.py  history.py  operations.py  parameters.py  pipelines.py
scripts/: check_commit_msg.py
tests/: conftest.py
tests/models/: test_artifact_type.py  test_dataframe_delta.py  test_modification_type.py
tests/requirements/: conftest.py  test_ac1_traceability.py  test_ac2_reproducibility.py  test_ac3_branching.py  test_ac4_reusability.py  test_ac5_ac6_comparison.py  test_ac5_ac6_not_implemented.py  test_ac7_data_evolution.py
tests/tracker/: test_comparison.py  test_delta_calculator.py  test_introspection.py  test_marimo_e2e.py  test_marimo_integration.py  test_runtime_storage_integration.py  test_step_category.py  test_storage.py  test_storage_reads.py  test_visualizations.py
tracker/: __init__.py  ast_rewriter.py  comparison.py  delta_calculator.py  introspection.py  kernel_hooks.py  logger.py  operation_registry.py  runtime.py  snapshot_engine.py  storage.py  storage_protocol.py  visualizations.py
